# solar-persistence-api/src/main/resources/solar-persistence-api-spec.yaml
@@ -746,6 +746,26 @@
           }
         }
       }
+    },
+    "/api/v1/weather/current": {
+      "get": {
+        "tags": [
+          "weather-controller"
+        ],
+        "operationId": "getCurrentWeatherEntry",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/WeatherDataEntry"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1032,6 +1052,154 @@
             "format": "int32"
           }
         }
+      },
+      "WeatherDataEntry": {
+        "type": "object",
+        "properties": {
+          "dateUtc": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "temperatureIndoorInCelcius": {
+            "type": "number",
+            "format": "float"
+          },
+          "humidityIndoor": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "baromRelativeIndoor": {
+            "type": "number",
+            "format": "float"
+          },
+          "baromAbsoluteIndoor": {
+            "type": "number",
+            "format": "float"
+          },
+          "temperatureOutdoorInCelsius": {
+            "type": "number",
+            "format": "float"
+          },
+          "humidityOutdoor": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "windDirection": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "windSpeedInMeterPerSecond": {
+            "type": "number",
+            "format": "float"
+          },
+          "windGustInMeterPerSecond": {
+            "type": "number",
+            "format": "float"
+          },
+          "maxDailyGustInMeterPerSecond": {
+            "type": "number",
+            "format": "float"
+          },
+          "uv": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "solarRadiation": {
+            "type": "number",
+            "format": "float"
+          },
+          "rainRateInMillimetersPerHour": {
+            "type": "number",
+            "format": "float"
+          },
+          "eventRainInMillimeters": {
+            "type": "number",
+            "format": "float"
+          },
+          "hourlyRainInMillimeters": {
+            "type": "number",
+            "format": "float"
+          },
+          "dailyRainInMillimeters": {
+            "type": "number",
+            "format": "float"
+          },
+          "weeklyRainInMillimeters": {
+            "type": "number",
+            "format": "float"
+          },
+          "monthlyRainInMillimeters": {
+            "type": "number",
+            "format": "float"
+          },
+          "yearlyRainInMillimeters": {
+            "type": "number",
+            "format": "float"
+          },
+          "wh25Batt": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "wh65Batt": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "stationType": {
+            "type": "string"
+          },
+          "model": {
+            "type": "string"
+          },
+          "freq": {
+            "type": "string"
+          },
+          "interval": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "passkey": {
+            "type": "string"
+          },
+          "runtime": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "heap": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "required": [
+          "dateUtc",
+          "temperatureIndoorInCelcius",
+          "humidityIndoor",
+          "baromRelativeIndoor",
+          "baromAbsoluteIndoor",
+          "temperatureOutdoorInCelsius",
+          "humidityOutdoor",
+          "windDirection",
+          "windSpeedInMeterPerSecond",
+          "windGustInMeterPerSecond",
+          "maxDailyGustInMeterPerSecond",
+          "uv",
+          "solarRadiation",
+          "rainRateInMillimetersPerHour",
+          "eventRainInMillimeters",
+          "hourlyRainInMillimeters",
+          "dailyRainInMillimeters",
+          "weeklyRainInMillimeters",
+          "monthlyRainInMillimeters",
+          "yearlyRainInMillimeters",
+          "wh25Batt",
+          "wh65Batt",
+          "stationType",
+          "model",
+          "freq",
+          "interval",
+          "passkey",
+          "runtime",
+          "heap"
+        ]
       }
     },
     "securitySchemes": {
